# RingCentral-CSV-Editor

./: .gitignore  CLAUDE.md  README.md  installer.iss  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
helper/: csv_helper.py
src/ringcentral_csv_editor/: __main__.py  desktop.py  main.py
src/ringcentral_csv_editor/helper/: csv_helper.py
src/ringcentral_csv_editor/styles/: RingCentralCSVApp.tcss
styles/: RingCentralCSVApp.tcss
